tests/ui/impl-trait/issue-72911.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `foo`
  --> $DIR/issue-72911.rs:11:33
   |
LL | fn gather_from_file(dir_entry: &foo::MissingItem) -> impl Iterator<Item = Lint> {
   |                                 ^^^ use of unresolved module or unlinked crate `foo`
   |
   = help: if you wanted to use a crate named `foo`, use `cargo add foo` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `foo`
  --> $DIR/issue-72911.rs:16:41
   |
LL | fn lint_files() -> impl Iterator<Item = foo::MissingItem> {
   |                                         ^^^ use of unresolved module or unlinked crate `foo`
   |
   = help: if you wanted to use a crate named `foo`, use `cargo add foo` to add it to your `Cargo.toml`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
